--- a/indexdark.html
+++ b/indexdark.html
@@ -5,7 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Paises BlackEdition</title>
+    <meta name="author" content="Grupo1">
+    <meta name="description" content="Proyecto para pruebas JavaScript">
+    <meta name="keywords" content="HTML, CSS, JavaScript, Bootstrap, ONCE">
+    <title>Paises | BlackEdition</title>
+    <link rel="icon" type="image/x-icon" href="imagenes/alien.svg">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
@@ -14,18 +18,296 @@
 
 <body>
     <div class="container-lg">
+        <nav class="navbar rounded p-2 mt-4 justify-content-between">
+            <a class="navbar-brand bg-light rounded-circle iconoprincipal" href="imagenes/Aliens.jpg"><img
+                    src="imagenes/alien.svg" width="30px">
+            </a>
+            <span class="titulo display-2">
+                AREA 51 FILES
+            </span>
+            <a class="navbar-brand bg-light rounded-circle icononasa" href="https://www.nasa.gov/" target="_blank"><img
+                    src="imagenes/ufo.svg" width="30px">
+            </a>
+        </nav>
+    </div>
+    <div class="SuperGears">
+        <img src="imagenes/gear.png" class="Supergear1">
+        <img src="imagenes/gearmini.png" class="Supergear2">
+    </div>
+    <div class="container-lg">
         <div class="row">
             <div class="col">
-                <nav class="navbar navbar-dark bg-dark rounded p-2 mt-4">
-                    <div class="container-fluid">
-                        
+                <div class="text-center pb-3">
+                    <button class="bg-transparent botoncentral" type="reset"><img src="imagenes/3d-cube-sphere.svg"
+                            width="50px"></button>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <h3 class="bg-transparent p-2 rounded text-center textocabeceras">Planeta</h3>
+                <ul class="list-group list-group-light mb-0">
+                    <li class="list-group-item d-flex justify-content-center align-items-center textoselects">
+                        <div class="d-flex align-items-center">
+                            <img src="imagenes/planet.svg" width="45px" class="bg-light rounded-circle icononasa" />
+                            <div class="ms-3">
+                                <p class="fw-bold mb-1">
+                                    <select name="#" class="p-0" disabled>
+                                        <option class="#" value="null">Planeta Tierra</option>
+                                    </select>
+                                </p>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="row mb-2">
+            <div class="col">
+                <h3 class="bg-transparent p-2 rounded text-center textocabeceras">Continente</h3>
+                <ul class="list-group list-group-light mb-0">
+                    <li class="list-group-item d-flex justify-content-center align-items-center textoselects">
+                        <div class="d-flex align-items-center">
+                            <img src="imagenes/world.svg" width="45px" class="bg-light rounded-circle icononasa" />
+                            <div class="ms-3">
+                                <p class="fw-bold mb-1">
+                                    <select name="continente" class="opcionescontinentescasilla p-0">
+                                        <option class="opcionescontinentes" value="null">Selecciona
+                                            Continente</option>
+                                        <option class="opcionescontinentes" value="asia">Asia</option>
+                                        <option class="opcionescontinentes" value="africa">Africa
+                                        </option>
+                                        <option class="opcionescontinentes" value="americas">América
+                                        </option>
+                                        <option class="opcionescontinentes" value="oceania">Oceanía
+                                        </option>
+                                        <option class="opcionescontinentes" value="europe">Europa
+                                        </option>
+                                    </select>
+                                </p>
+
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+            <div class="col">
+                <h3 class="bg-transparent p-2 rounded text-center textocabeceras">País</h3>
+                <ul class="list-group list-group-light mb-0">
+                    <li class="list-group-item d-flex justify-content-center align-items-center textoselects">
+                        <div class="d-flex align-items-center">
+                            <img src="imagenes/map-search.svg" width="45px" class="bg-light rounded-circle icononasa" />
+                            <div class="ms-3">
+                                <p class="fw-bold mb-1"><select name="pais"
+                                        class="opcionescontinentescasilla p-0">
+                                        <option class="opcionescontinentes" value="null">Selecciona
+                                            País</option>
+                                    </select></p>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col">
+                <ul class="nav nav-tabs nav-justified mt-5 textocabeceras">
+                    <li class="nav-item">
+                        <a class="nav-link active" data-bs-toggle="tab" href="#datos"><h3>Datos</h3></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" data-bs-toggle="tab" href="#geografia"><h3>Geografía</h3></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" data-bs-toggle="tab" href="#idioma"><h3>Idioma</h3></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" data-bs-toggle="tab" href="#bandera"><h3>Bandera</h3></a>
+                    </li>
+                </ul>
+                <div class="tab-content">
+                    <div class="tab-pane container active textodatos" id="datos">
+                        <div class="row p-2">
+                            <div class="col">
+                                <div>
+                                    <h2>XnombredelPais</h2>
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div class="celdagears">
+                                    <img src="imagenes/gear.png" class="gear1">
+                                    <img src="imagenes/gearmini.png" class="gear2">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row ms-5">
+                            <div class="col">
+                                <div>
+                                    <h4>Capital: <span>nombreXCapital</span></h4>
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div>
+                                    <h4>Población: <span>Xpoblacion</span></h4>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row ms-5">
+                            <div class="col">
+                                <div>
+                                    <h4>Moneda: <span>XMoneda</span></h4>
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div>
+                                    <h4>Idioma: <span>Xidioma</span></h4>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row ms-5">
+                            <div class="col">
+                                <div>
+                                    <h4>Divisa: <span>Xdivisa</span></h4>
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div>
+                                    <h4>Superficie: <span>Xsuperficie</span></h4>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row ms-5">
+                            <div class="col">
+                                <div>
+                                    <h4>Forma de Gobierno: <span>Xgobierno</span></h4>
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div>
+                                    <h4>Religión: <span>Xreligion</span></h4>
+                                </div>
+                            </div>
+                        </div>
+
                     </div>
-                </nav>
+                    <div class="tab-pane container fade textodatos" id="geografia">
+                        <div class="row p-2">
+                            <div class="col">
+                                <div>
+                                    <h2>XnombredelPais</h2>
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div class="celdagears">
+                                    <img src="imagenes/gear.png" class="gear1">
+                                    <img src="imagenes/gearmini.png" class="gear2">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row ms-5">
+                            <div class="col">
+                                <div>
+                                    <h4>Fronteras Terrestres: <span>XfronteraTerre</span></h4>
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div>
+                                    <h4>Fronteras Marítimas: <span>XfronteraMari</span></h4>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="tab-pane container fade textodatos" id="idioma">
+                        <div class="row p-2">
+                            <div class="col">
+                                <div>
+                                    <h2>XnombredelPais</h2>
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div class="celdagears">
+                                    <img src="imagenes/gear.png" class="gear1">
+                                    <img src="imagenes/gearmini.png" class="gear2">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row ms-5">
+                            <div class="col">
+                                <div>
+                                    <h4>Idioma 1: <span>Xidioma1</span></h4>
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div>
+                                    <h4>Idioma2: <span>Xidioma2</span></h4>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="tab-pane container fade textodatos" id="bandera"> <div class="row p-2">
+                        <div class="col">
+                            <div>
+                                <h2>XnombredelPais</h2>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="celdagears">
+                                <img src="imagenes/gear.png" class="gear1">
+                                <img src="imagenes/gearmini.png" class="gear2">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row ms-5">
+                        <div class="col">
+                            <h4>Bandera: <span></span></h4>                            
+                                <div class="card" style="width:400px">
+                                    <img class="card-img-top" src="https://okdiario.com/img/2019/10/25/bandera-de-espana.jpg" alt="Card image" style="width:100%">
+                                    <div class="card-body">
+                                    </div>
+                                  </div>                            
+                        </div>
+                        <div class="col">
+                            <div>
+                                <h4>Escudo: <span></span></h4>
+                                <div class="card" style="width:400px">
+                                    <img class="card-img-top" src="https://okdiario.com/img/2019/10/25/bandera-de-espana.jpg" alt="Card image" style="width:100%">
+                                    <div class="card-body">
+                                    </div>
+                                  </div> 
+                            </div>
+                        </div>
+                    </div></div>
+                </div>
+
             </div>
         </div>
     </div>
 
 
+    <div class="container-lg">
+        <div class="row">
+            <div class="col">
+                <div class="text-center pb-3">
+                    <button class="bg-transparent botoncentral" type="reset"><img src="imagenes/3d-cube-sphere.svg"
+                            width="100px"></button>
+                </div>
+            </div>
+        </div>
+    </div>
 
-
+    <footer class="container-fluid bg-secondary bg-gradient text-center text-white text-lg-start bottom-0">
+        <div class="text-center small p-0">
+            © 2022 Copyleft: <svg height="24" viewBox="0 0 16 16" version="1.1" width="24" data-view-component="true">
+                <path fill-rule="evenodd"
+                    d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z">
+                </path>
+            </svg>
+            <a class="text-decoration-none text-white"
+                href="https://github.com/jdiazbasgit/becaonce2ed">github.com/jdiazbasgit/becaonce2ed</a></label>
+        </div>
+    </footer>
 </body>
+
+</html>
