--- a/paisesPrincipal.html
+++ b/paisesPrincipal.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
+ 
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,7 +11,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
   <script src="paises.js" defer></script>
 </head>
-
+ 
 <body>
   <div class="container">
     <header>
@@ -20,24 +20,24 @@
       <img src="https://image.shutterstock.com/image-vector/cartoon-planet-earth-on-white-260nw-2140149873.jpg"
         align="right" width="227" height="156">
       <div class="container-fluid p-5 bg-success text-white text-center ">
-
+ 
         <h1>PAISES DEL MUNDO</h1>
       </div>
     </header>
-
+ 
     <div class="container mt-3 fade" id="divSpecial">
       <ul class="nav nav-pills nav-justified">
         <li class="nav-item">
           <button disabled class="nav-link active bg-success" href="#" onclick="dameDatosGenerales()">Datos generales</button>
         </li>
         <li class="nav-item">
-          <a class="nav-link active bg-success" href="#">Datos geograficos</a>
+          <button disabled class="nav-link active bg-success" href="#" onclick="pintaDatosGeograficos()">Datos geograficos</button>
         </li>
         <li class="nav-item">
-          <a class="nav-link active bg-success" href="#">Traducción</a>
+          <button disabled class="nav-link active bg-success" href="#" onclick="dameTraducciones()">Traducción</button>
         </li>
         <li class="nav-item">
-          <a class="nav-link active bg-success" href="#">Banderas</a>
+          <button disabled class="nav-link active bg-success" href="#" onclick="dameBanderas()">Banderas</button>
         </li>
       </ul>
     </div>
